Fixed overflow issue

--- a/example/style.css
+++ b/example/style.css
@@ -35,6 +35,7 @@ section {
 }
 
 #color-scheme-selector {
-    margin: 1em;
+    padding: 1em;
+    width: fit-content;
 }
 
